--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.9"
-dirs = "6"
-comfy-table = "7"
+directories = "6"
+tabled = { version = "0.20", features = ["ansi"] }
 colored = "3"
 thiserror = "2"
 chrono = { version = "0.4", features = ["serde"] }
